Modify .env for MongoDB Atlas configuration
Updated MongoDB URI for Atlas connection and added credential placeholders.

--- a/Inventory-Management-System-MERN-CRUD-App-main/Backend/.env
+++ b/Inventory-Management-System-MERN-CRUD-App-main/Backend/.env
@@ -1,5 +1,13 @@
 # MongoDB Connection String
-MONGODB_URI=mongodb://127.0.0.1:27017/IMS
+# Replace the placeholders with your actual MongoDB Atlas credentials:
+# - <username>: Your MongoDB Atlas database username
+# - <password>: Your MongoDB Atlas database password
+# - <cluster-url>: Your cluster URL (e.g., cluster0.abc123.mongodb.net)
+
+MONGODB_URI=mongodb+srv://dbUser:123@cluster0.crs1u2s.mongodb.net/?appName=Cluster0
 
 # Port (optional - deployment platforms usually set this automatically)
 PORT=3001
+
+# Example of what it should look like (DO NOT USE THIS):
+# MONGODB_URI=mongodb+srv://myuser:mypassword123@cluster0.abc123.mongodb.net/IMS?retryWrites=true&w=majority
